# livraria

./: .editorconfig  .gitignore  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_livro_autores.py  0005_rename_quantidad_itenscompra_quantidade.py
livraria/models/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py
usuario/migrations/: 0001_initial.py
